--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ecommerce-backend-hw13",
   "version": "1.0.0",
-  "description": "",
+  "description": "In this project I configured a working Express.js API for the backend of an ecommerce site, incorporating Sequelize and a MySQL2 database.\r Routes were tested in [Insomnia](https://insomnia.rest/) and the same can be done with [Postman](https://www.postman.com/).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
